force-app/main/default/objects/CampaignMember/fields/Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Member ID</label>
    <type>Text</type>
</CustomField>