force-app/main/default/objects/CampaignMember/fields/Lead_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_2__c</fullName>
    <formula>Lead.CreatedDate + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time 2</label>
    <type>Date</type>
</CustomField>