force-app/main/default/objects/CampaignMember/fields/Old_Lead_2__c.field-meta.xml
<CustomField>
    <fullName>Old_Lead_2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Old Lead 2</label>
    <type>Checkbox</type>
</CustomField>