force-app/main/default/objects/CampaignMember/fields/Old_Lead__c.field-meta.xml
<CustomField>
    <fullName>Old_Lead__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) &lt; (DATEVALUE(Lead.CreatedDate) + 7), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Lead</label>
    <type>Checkbox</type>
</CustomField>